hphp/test/slow/record-type-hints/invalid-field-type3.php.expectf
Fatal error: Invalid record field type hint for 'A::$x' in %s/invalid-field-type3.php on line 3
